--- a/firstHomeWork/src/scss/home.scss
+++ b/firstHomeWork/src/scss/home.scss
@@ -1,48 +1,71 @@
-
-.img-rounded{
+.img-rounded {
     height: 30rem;
-    width: auto;
+    width: 21rem;
     z-index: 0;
     border-radius: 10%;
 }
-.circel{
+
+.circel {
     border: 1px solid black;
-    border-radius: 50% 50% 50% 50%;
-    height: 20rem;
-    width: 20rem;
-    left: 20%;
+    border-radius: 10%;
+    height: 30rem;
+    width: 22rem;
+    left: 9rem;
     z-index: 1;
     position: absolute;
 }
-.img-top{
+
+.img-top {
     top: 10px;
     right: 30%;
-    color:$brown;
+    color: $brown;
     position: absolute;
     z-index: 1;
     font-size: 40px;
 }
-.img-mid{
+
+.img-mid {
     top: 20px;
     right: 35%;
-    color:$brown;
+    color: $brown;
     position: absolute;
     z-index: 1;
     font-size: 40px;
 }
-.img-bottom{
+
+.img-bottom {
     top: 40px;
     right: 30%;
-    color:$brown;
+    color: $brown;
     position: absolute;
     z-index: 1;
     font-size: 40px;
 }
-.bottom-img{
+
+.bottom-img {
     top: 70%;
     right: 65%;
-    color:$brown;
+    color: $brown;
     position: absolute;
     z-index: 1;
     font-size: 30px;
 }
+
+.home {
+    padding-top: 100px;
+}
+
+.homet1 {
+    font-weight: normal;
+    padding: 10px;
+    cursor: default;
+    color: $darkBlue;
+}
+
+.homet2 {
+    font-weight: bolder;
+    padding: 10px;
+    cursor: default;
+    color: $darkBlue;
+}
+
