--- a/firstHomeWork/src/scss/style.scss
+++ b/firstHomeWork/src/scss/style.scss
@@ -5,7 +5,8 @@ $lightYellow: #FBF8CC;
 $poppins-font : "Poppins";
 
 @import 'button.scss';
-@import 'homeImg.scss';
+@import 'home.scss';
+@import 'about.scss';
 
 * {
     padding: 0;
@@ -13,12 +14,31 @@ $poppins-font : "Poppins";
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: $lightYellow;
     font-family: $poppins-font;
+    color:$darkBlue
 }
 
-.btn-button{
+.btn-button {
     background-color: $yellow;
-    
+
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px grey;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: $yellow;
+    border-radius: 10px;
 }
