--- a/firstHomeWork/src/scss/style.scss
+++ b/firstHomeWork/src/scss/style.scss
@@ -7,6 +7,7 @@ $poppins-font : "Poppins";
 @import 'button.scss';
 @import 'home.scss';
 @import 'about.scss';
+@import 'card.scss';
 
 * {
     padding: 0;
