--- a/firstHomeWork/src/scss/about.scss
+++ b/firstHomeWork/src/scss/about.scss
@@ -1,7 +1,8 @@
 .color{
     color: $yellow;
-    line-height: 100px;
-    size:100px
+    margin-top: 5rem;
+    line-height: 50px;
+    size:50px;
 }
 .about{
     &.parag{
